--- a/Source/pages/fastrecovery/fastrecovery.wxml
+++ b/Source/pages/fastrecovery/fastrecovery.wxml
@@ -13,7 +13,7 @@
     <view class='flex-1 margin-20 border padding-10'>
       <navigator url='/pages/selectmodel/selectmodel' >
         <view class='flex-row flex-center'>
-          <input class='flex-1 h5 margin-left-10' name='brand' value='{{modelinfo.brand_id_name}}' readonly   placeholder='请选择品牌'></input>
+          <input class='flex-1 h5 margin-left-10' name='brand' disabled='true' value='{{modelinfo.brand_id_name}}' readonly   placeholder='请选择品牌'></input>
           <image class='felx-3 icon-15' src='{{uploadpath}}resource/{{res.bottom_icon}}'></image>
         </view>
       </navigator>
@@ -27,7 +27,7 @@
     <view class='flex-1 margin-20 border padding-10'>
       <navigator url='/pages/selectmodel/selectmodel' >
         <view class='flex-row flex-center'>
-          <input class='flex-1 h5 margin-left-10' name='model'  value='{{modelinfo.model_name}}' readonly  bindinput='model_input' placeholder='请选择型号'></input>
+          <input class='flex-1 h5 margin-left-10' name='model' disabled='true'  value='{{modelinfo.model_name}}' readonly  bindinput='model_input' placeholder='请选择型号'></input>
           <image class='felx-3 icon-15' src='{{uploadpath}}resource/{{res.bottom_icon}}'></image>
         </view>
       </navigator>
@@ -113,7 +113,16 @@
       </navigator>
     </view>
 
-    <checkbox-group name='checkbox' bindchange="">
+    <view class='padding-10 margin-20 border' > 
+    <picker bindchange='bindcondition' range='{{condition}}'> 
+    <view class='flex-row flex-center'>
+    <input class='h5 flex-1 margin-left-10' disabled='true' name='condition' placeholder='请选择机型成色' value='{{condition[cdt]}}' bindinput='condition_input'> </input>
+    <image class='felx-3 icon-15' src='{{uploadpath}}resource/{{res.bottom_icon}}'></image>
+    </view>
+    </picker>
+    </view>
+
+    <!-- <checkbox-group name='checkbox' bindchange="">
       <label class="checkbox h5 ">
         <checkbox color='#2699EC' value="充新"  />充新
         <checkbox color='#2699EC' value="靓机" />靓机
@@ -123,7 +132,7 @@
         <checkbox color='#2699EC' value="触摸破"  />触摸破
         <checkbox color='#2699EC' value="内屏坏"  />内屏坏
       </label>
-    </checkbox-group>
+    </checkbox-group> -->
     
 </view>
 
