--- a/Source/pages/problem/problem.wxml
+++ b/Source/pages/problem/problem.wxml
@@ -8,7 +8,7 @@
   </view>
 </view>
 
- <view>{{blockseq}}测试定价，后续删除：{{price}} - {{minusprice}} = {{totalprice}}</view> 
+ <!-- <view>{{blockseq}}测试定价，后续删除：{{price}} - {{minusprice}} = {{totalprice}}</view>  -->
 <view class=" flex-row column " wx:for="{{timu}}" wx:key="k" wx:for-index="idx" hidden='{{timu[idx-1].xuanle==""}}' wx:if="{{blockseq==-1||idx<blockseq+1}}">
 
   <view class='flex-row flex-center ' style='margin-left:20rpx;'>
@@ -25,12 +25,17 @@
   </view>
 </view>
 
-<!-- <form bindsubmit="confirm" bindreset="formReset" hidden='{{}}' report-submit="{{true}}">
+<form bindsubmit="confirm" bindreset="formReset" hidden='{{modelinfo.brand_id=="12"}}' report-submit="{{true}}">
 <view class='padding-20 flex-row column'>
-<view>串码：</view>
-<view class='margin-top-10 bg-white' style='border-radius:10rpx'><input class='h5 padding-10' name='chuanhao'  bindinput='ChuanHao' placeholder='请输入串码'></input></view>
+<view>内存：{{brandinfo.brand}}</view>
+<view class='margin-top-10 bg-white' style='border-radius:10rpx'><input class='h5 padding-10' name='chuanhao'  bindinput='Neicun' placeholder='请输入内存'></input></view>
 </view>
-</form> -->
+
+<view class='padding-20 flex-row column'>
+<view>颜色：{{brandinfo.brand}}</view>
+<view class='margin-top-10 bg-white' style='border-radius:10rpx'><input class='h5 padding-10' name='chuanhao'  bindinput='Color' placeholder='请输入颜色'></input></view>
+</view>
+</form>
 
 <navigator url='/pages/evaluation/evaluation?id={{options.id}}&price={{totalprice}}&anwser={{anwser}}' hidden='{{da<timu.length}}' wx:if="{{totalprice>=0}}"  class='height-100 bg  flex-row flex-column' style='line-height:100rpx'>查看定价</navigator>
 
