--- a/Source/pages/problem/problem.wxml
+++ b/Source/pages/problem/problem.wxml
@@ -1,4 +1,6 @@
 <!--pages/problem/problem.wxml-->
+<view class='pgb white-block' style='width:750rpx'></view>
+<view class='pgb bg-primary' style='width:{{(750*da/timu.length)}}rpx'></view>
 <view class='top flex-row flex-center'>
   <view class='h5 flex-4 '>选择结果和实际情况相符，将以最快速度收款</view>
   <view class='flex-1 flex-row flex-center'>
