--- a/Source/pages/problem/problem.wxss
+++ b/Source/pages/problem/problem.wxss
@@ -5,13 +5,12 @@ Page{
   padding-bottom:120rpx;
 }
 .top{
-  background-color: white;
   padding: 5rpx 20rpx 5rpx 20rpx;
   border-bottom: 1rpx solid rgb(204, 204, 204);
   box-shadow: 0px 2px 2px rgb(204, 204, 204);
   position: fixed;
   top:0px;
-  z-index: 1;
+  z-index: 100;
   width: 100%;
 }
 .prb{
@@ -53,4 +52,11 @@ Page{
 }
 .radio {
   transform:scale(0.7);
+}
+.pgb{
+  position: fixed;
+  height: 62rpx;
+  top:0rpx;
+  left: 0rpx;
+  z-index: 90;
 }
