--- a/Source/pages/details/details.wxml
+++ b/Source/pages/details/details.wxml
@@ -10,15 +10,17 @@
 
 <view class='flex-row' style=''>
 
-<scroll-view scroll-y='true' class='flex-1'  style='height:1104rpx;background-color:#f2f2f0;'>
+<scroll-view scroll-y class='flex-1'  style='height:1104rpx;background-color:#f2f2f0;'>
 <view class='text-left flex-row column' style=''>
 <view class='padding-20  h5 {{s==0?"bg":""}}' bindtap='brandtap' id='0' >全部</view>
+<view class='padding-20  h5 {{s==item.id?"bg":""}}' bindtap='brandtap' id='{{item.id}}' wx:for="{{brand}}" wx:key="k">{{item.brand}}</view>
+<view class='padding-20  h5 {{s==item.id?"bg":""}}' bindtap='brandtap' id='{{item.id}}' wx:for="{{brand}}" wx:key="k">{{item.brand}}</view>
 <view class='padding-20  h5 {{s==item.id?"bg":""}}' bindtap='brandtap' id='{{item.id}}' wx:for="{{brand}}" wx:key="k">{{item.brand}}</view>
 </view>
 </scroll-view>
 
-<scroll-view scroll-y='true' class='flex-3   flex-row column' style='height:1104rpx;'>
+<scroll-view scroll-y class='flex-3   flex-row column' style='height:1104rpx;'>
 <navigator url='/pages/problem/problem?id={{item.id}}{{options.newphone!=undefined?"&new=Y":""}}' class='padding-30 margin-left-50  h5' wx:for='{{model}}' wx:key="k" hidden='{{s!=0&& s!=item.brand_id}}'>{{item.model_name}}</navigator>
-
 </scroll-view>
+
 </view>
