--- a/Source/pages/problem/problem.wxml
+++ b/Source/pages/problem/problem.wxml
@@ -1,5 +1,5 @@
 <!--pages/problem/problem.wxml-->
-<view class='top flex-row flex-center'>
+<view class='top flex-row flex-center' >
   <view class='h5 flex-4 '>选择结果和实际情况相符，将以最快速度收款</view>
   <view class='flex-1 flex-row flex-center'>
     <view class='h4 '>{{da}}</view>
@@ -25,7 +25,7 @@
   </view>
 </view>
 
-<form bindsubmit="confirm" bindreset="formReset" hidden='{{modelinfo.brand_id=="12"}}' report-submit="{{true}}">
+<!-- <form bindsubmit="confirm" bindreset="formReset" hidden='{{modelinfo.brand_id=="12"}}' report-submit="{{true}}">
 <view class='padding-20 flex-row column'>
 <view>内存：{{brandinfo.brand}}</view>
 <view class='margin-top-10 bg-white' style='border-radius:10rpx'><input class='h5 padding-10' name='chuanhao'  bindinput='Neicun' placeholder='请输入内存'></input></view>
@@ -35,7 +35,7 @@
 <view>颜色：{{brandinfo.brand}}</view>
 <view class='margin-top-10 bg-white' style='border-radius:10rpx'><input class='h5 padding-10' name='chuanhao'  bindinput='Color' placeholder='请输入颜色'></input></view>
 </view>
-</form>
+</form> -->
 
 <navigator url='/pages/evaluation/evaluation?id={{options.id}}&price={{totalprice}}&anwser={{anwser}}' hidden='{{da<timu.length}}' wx:if="{{totalprice>=0}}"  class='height-100 bg  flex-row flex-column' style='line-height:100rpx'>查看定价</navigator>
 
